SOURCE/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Actual_Reimbursement__c</fullName>
        <label>Actual Reimbursement</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prev Admission</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Admissions</relationshipLabel>
        <relationshipName>Admissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admission_with_LOC__c</fullName>
        <formula>Client_First_Name__c + &quot; &quot;+Client_Last_Name__c +&quot;-&quot;+Text(LOC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission with LOC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admitted_Date__c</fullName>
        <label>Admitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admitted__c</fullName>
        <label>Date of Admission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_No_1__c</fullName>
        <label>Alternate Phone No #1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Type__c</fullName>
        <label>Alternate Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alumni_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alumni Information</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Admissions (Alumni Information)</relationshipLabel>
        <relationshipName>Admissions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amendments_Payment_Arrangements__c</fullName>
        <label>Amendments / Payment Arrangements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount1_Due__c</fullName>
        <formula>(Other__c + PHP_Housing__c + Cash_Pay_Rate__c + Sober_Living__c + Patient_Responsibility__c - Scholarship__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Met_Detox__c</fullName>
        <formula>(Insurance_Provider__r.Allowable_Detox__c *Detox__c) * Co_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Met_IOP__c</fullName>
        <formula>Insurance_Provider__r.Allowable_IOP__c * IOP__c * Co_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Met_IPR__c</fullName>
        <formula>Insurance_Provider__r.Allowable_ITR__c * IPR__c * Co_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Met_PHP__c</fullName>
        <formula>PHP__c *Insurance_Provider__r.Allowable_PHP__c * Co_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Met_RTC__c</fullName>
        <formula>Insurance_Provider__r.Allowable_RTC__c * RTC__c * Co_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buisness_Development_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buisness Development Information</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Admissions (Buisness Development Information)</relationshipLabel>
        <relationshipName>Admissions5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Caller_Email__c</fullName>
        <label>Caller Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Caller_First_Name__c</fullName>
        <label>Caller First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Last_Name__c</fullName>
        <label>Caller Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Phone_Type__c</fullName>
        <label>Caller Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Phone__c</fullName>
        <label>Caller Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Caller_Relationship_To_Client__c</fullName>
        <label>Caller Relationship To Patient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Brother/Sister</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>GrandParent</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Callout_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Callout Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Pay_Rate__c</fullName>
        <label>Cash Pay Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City_Subscriber__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_insurance__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_DOB__c</fullName>
        <label>Patient DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <label>Patient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_First_Name__c</fullName>
        <label>Patient First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Last_Name__c</fullName>
        <label>Patient Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Middle_Name__c</fullName>
        <label>Patient Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_s_Plan_for_Treatment__c</fullName>
        <label>Client&apos;s Plan for Treatment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Insurance__c</fullName>
        <label>Co-Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Condition_Treated__c</fullName>
        <label>Condition Treated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DC_Date__c</fullName>
        <label>DC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Detox__c</fullName>
        <label>Detox</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Readmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Readmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug_of_Choice__c</fullName>
        <label>Drug of Choice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alcohol</fullName>
                </value>
                <value>
                    <fullName>Barbiturates</fullName>
                </value>
                <value>
                    <fullName>Valium</fullName>
                </value>
                <value>
                    <fullName>Ativan</fullName>
                </value>
                <value>
                    <fullName>Xanax</fullName>
                </value>
                <value>
                    <fullName>Librium</fullName>
                </value>
                <value>
                    <fullName>Klonopin</fullName>
                </value>
                <value>
                    <fullName>Cocaine</fullName>
                </value>
                <value>
                    <fullName>Crack Cocaine</fullName>
                </value>
                <value>
                    <fullName>Crystal Meth</fullName>
                </value>
                <value>
                    <fullName>Bath Salts</fullName>
                </value>
                <value>
                    <fullName>Adderall</fullName>
                </value>
                <value>
                    <fullName>Caffeine</fullName>
                </value>
                <value>
                    <fullName>Cigarettes</fullName>
                </value>
                <value>
                    <fullName>PCP</fullName>
                </value>
                <value>
                    <fullName>Angel Dust</fullName>
                </value>
                <value>
                    <fullName>Marijuana</fullName>
                </value>
                <value>
                    <fullName>Synthetic Marijuana</fullName>
                </value>
                <value>
                    <fullName>THC</fullName>
                </value>
                <value>
                    <fullName>LSD</fullName>
                </value>
                <value>
                    <fullName>Acid</fullName>
                </value>
                <value>
                    <fullName>Heroin</fullName>
                </value>
                <value>
                    <fullName>Fentanyl</fullName>
                </value>
                <value>
                    <fullName>Percocet</fullName>
                </value>
                <value>
                    <fullName>Morphine</fullName>
                </value>
                <value>
                    <fullName>Kratom</fullName>
                </value>
                <value>
                    <fullName>Vicodin</fullName>
                </value>
                <value>
                    <fullName>Dilaudid</fullName>
                </value>
                <value>
                    <fullName>Methadone</fullName>
                </value>
                <value>
                    <fullName>Suboxone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Final Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emergency_First_Name__c</fullName>
        <label>Emergency First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Relationship__c</fullName>
        <label>Emergency Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Brother/Sister</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_TERMS__c</fullName>
        <label>Financial Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Scholarship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Scholarship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Secondary_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Secondary Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IOP__c</fullName>
        <label>IOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPR__c</fullName>
        <label>IPR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identifier_Gender__c</fullName>
        <label>Identifier Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unable to Specify</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installments_Per_Month__c</fullName>
        <label>Installments By Frequency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Provider</label>
        <referenceTo>Payor__c</referenceTo>
        <relationshipLabel>Admissions</relationshipLabel>
        <relationshipName>Admissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurence_Provider1__c</fullName>
        <label>Insurence Provider1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1199 Ben &amp; Pen Plan 13162</fullName>
                </value>
                <value>
                    <fullName>Aetna - FL 60054</fullName>
                </value>
                <value>
                    <fullName>AETNA -SIGNATURE ADMINISTRATORS</fullName>
                </value>
                <value>
                    <fullName>ALICARE AMALGAMATED LIFE</fullName>
                </value>
                <value>
                    <fullName>Allegiance Benefit Plan Management INC</fullName>
                </value>
                <value>
                    <fullName>Alliance Health and Life</fullName>
                </value>
                <value>
                    <fullName>Alliant Health Plans of Georgia</fullName>
                </value>
                <value>
                    <fullName>Allied Benefits Systems</fullName>
                </value>
                <value>
                    <fullName>Allied Trades Assistance Progam</fullName>
                </value>
                <value>
                    <fullName>Ambetter of Arkansas 68069</fullName>
                </value>
                <value>
                    <fullName>AMERAPLAN</fullName>
                </value>
                <value>
                    <fullName>Ameriben</fullName>
                </value>
                <value>
                    <fullName>AmeriHealth Administrator</fullName>
                </value>
                <value>
                    <fullName>AmeriHealth HMO</fullName>
                </value>
                <value>
                    <fullName>AMERIHEALTH OF NEW JERSEY</fullName>
                </value>
                <value>
                    <fullName>ANTHEM BLUE CROSS OF CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>AUTOMATED BENEFIT SOLUTIONS FOR SMART HEATH</fullName>
                </value>
                <value>
                    <fullName>AvMed</fullName>
                </value>
                <value>
                    <fullName>BCBS - AK (Premera)</fullName>
                </value>
                <value>
                    <fullName>BCBS - AL</fullName>
                </value>
                <value>
                    <fullName>BCBS - AR</fullName>
                </value>
                <value>
                    <fullName>BCBS - AZ</fullName>
                </value>
                <value>
                    <fullName>BCBS - CO</fullName>
                </value>
                <value>
                    <fullName>BCBS - CT (Anthem)</fullName>
                </value>
                <value>
                    <fullName>BCBS - DE (Highmark)</fullName>
                </value>
                <value>
                    <fullName>BCBS - Federal</fullName>
                </value>
                <value>
                    <fullName>BCBS - FL</fullName>
                </value>
                <value>
                    <fullName>BCBS - GA</fullName>
                </value>
                <value>
                    <fullName>BCBS - IA (Wellmark)</fullName>
                </value>
                <value>
                    <fullName>BCBS - ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOC__c</fullName>
        <label>LOC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>PHP/Day-Night</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Sober Living</fullName>
                </value>
                <value>
                    <fullName>Outstanding balances</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOC_for_Referrel__c</fullName>
        <label>LOC for Referrel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>PHP/Day-Night</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Initial Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level_of_care_stepping_into__c</fullName>
        <label>Level of care stepping into</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>PHP/Day-Night</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRN__c</fullName>
        <label>MRN#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Unmarried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Group__c</fullName>
        <label>Medical Group #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Insurance_Phone__c</fullName>
        <label>Medical Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Medical_Member_ID__c</fullName>
        <label>Medical Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOP__c</fullName>
        <label>OOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP__c</fullName>
        <label>OP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <label>Other Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PHP_Housing__c</fullName>
        <label>PHP Housing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PHP__c</fullName>
        <label>PHP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Responsibility__c</fullName>
        <label>Estimated Patient Responsibility</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preffered_Name__c</fullName>
        <label>Preffered Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Counselor__c</fullName>
        <label>Primary Counselor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Private_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RTC__c</fullName>
        <label>RTC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reaon_for_Refer_Out__c</fullName>
        <label>Reason for Refer Out</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provider Preference</fullName>
                </value>
                <value>
                    <fullName>Patient Preference</fullName>
                </value>
                <value>
                    <fullName>Limited Provider Availability</fullName>
                </value>
                <value>
                    <fullName>Service Not Offered</fullName>
                </value>
                <value>
                    <fullName>Insurance Not Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferralSourceIds__c</fullName>
        <label>Referral Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Admissions (Outbound referring Contact)</relationshipLabel>
        <relationshipName>Admissions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Admissions (Inbound Referral Contact)</relationshipLabel>
        <relationshipName>Admissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Admissions (Inbound Refarral Account)</relationshipLabel>
        <relationshipName>Admissions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Admissions (Outbound Referring Account)</relationshipLabel>
        <relationshipName>Admissions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residential__c</fullName>
        <label>Residential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returning_to_our_care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returning to our care?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSI__c</fullName>
        <inlineHelpText>Surgical Site Infection</inlineHelpText>
        <label>SSI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Scholarship__c</fullName>
        <label>Scholarship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secondary_Emergency_First_Name__c</fullName>
        <label>Secondary Emergency First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Emergency_Last_Name__c</fullName>
        <label>Secondary Emergency Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Emergency_Phone_Number__c</fullName>
        <label>Secondary Emergency Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Emergency_Relationship__c</fullName>
        <label>Secondary Emergency Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Group__c</fullName>
        <label>Secondary Group #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Insurance Provider</label>
        <referenceTo>Payor__c</referenceTo>
        <relationshipLabel>Admissions (Secondary Insurance Provider)</relationshipLabel>
        <relationshipName>Admissions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Member_ID__c</fullName>
        <label>Secondary Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Referrent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Referent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Admissions (Secondary Inbound Contact)</relationshipLabel>
        <relationshipName>Admissions1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>